data/all_generated_tests/raw_wast_tests/unreachable_UnreachableCodeExecution_1045.wast
;; 6. **Unreachable after Valid Instructions:**    - **Description:** Execute a valid sequence of instructions like `i32.const 1` then `i32.const 2` followed by `unreachable` and ensure it traps.    - **Constraint:** Checks sequence validity before `unreachable`.    - **Relation to Unreachable Code Execution:** Verifies that valid operations preceding `unreachable` do not prevent the trap.

(assert_invalid
  (module (func $unreachable-after-valid-instructions
    i32.const 1
    i32.const 2
    unreachable
  ))
  "unreachable instruction does not prevent trap"
)